--- a/css/style.css
+++ b/css/style.css
@@ -127,7 +127,7 @@ body {
 #menu-screen {
     align-items: center;
     justify-content: center;
-    padding: 0 24px;
+    padding: 0;
     z-index: 10;
     box-sizing: border-box;
     width: 100%;
@@ -331,10 +331,8 @@ body {
     position: relative;
     width: 260px;
     height: 260px;
-    margin-left: auto !important;
-    margin-right: auto !important;
-    margin-bottom: 4px;
-    align-self: center;
+    margin: 0 0 4px 0;
+    flex-shrink: 0;
 }
 
 .menu-ring canvas {
